--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('./assets/background.jpeg');
+  background: url('./assets/background.jpeg'), linear-gradient(#007bb2, #0d1423);;
+  background-blend-mode: screen;
   background-size: cover;
   transform: scaleX(-1);
-  /* background: linear-gradient(#007bb2, #0d1423); */
 }
 
 .card {
