--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,24 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-html {
-  transform: scaleX(-1);
-}
-
 body {
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  min-height: 500px;
   background: url('./assets/background.jpeg'), linear-gradient(#007bb2, #0d1423);;
   background-blend-mode: screen;
+  background-position: center;
   background-size: cover;
   transform: scaleX(-1);
 }
@@ -148,4 +155,10 @@ body {
 
 .card .details .cast ul li img {
   max-width: 100%;
+}
+
+@media (max-width: 640px) {
+  .card {
+    margin-left: 0vw;
+  }
 }
